@@ -1,3 +1,8 @@
+fCorpo 1.1.2, 2017-12-23
+------------------------
+- improve animation effects
+- add footer menu
+
 fCorpo 1.1.1, 2017-11-14
 ------------------------
 - add Animations
